feat: done with the addition of the aws setup for s3 image upload (currently commented)
